--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "ext-curl": "*",
+        "ext-json": "*",
         "astrotomic/laravel-translatable": "^11.8",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
@@ -17,6 +19,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "2.4",
         "mcamara/laravel-localization": "^1.5",
+        "pusher/pusher-php-server": "^4.1",
         "spatie/laravel-enum": "^1.6",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
